<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/queryTextMarginEnd"
            android:layout_marginStart="@dimen/queryTextMarginStart"
            android:hint="@string/input_query"
            android:layout_gravity="start|center_vertical"
            android:completionThreshold="100"
            android:paddingEnd="@dimen/searchMeTextViewEndPadding"
            android:paddingStart="0dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:textSize="22sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:theme="@style/InputQueryAutocomplete"
            android:scrollbars="horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/inputQueryTextColor" />

        <Button
            android:id="@+id/button_clear_query"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/clearButtonWidth"
            android:layout_height="@dimen/clearButtonWidth"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/clearButtonLeftRightMargin"
            android:background="@android:color/transparent" />

        <!--android:drawableStart="@drawable/ic_clear_black_24dp"-->

        <Button
            android:id="@+id/button_show_history"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/histButtonWidth"
            android:layout_height="@dimen/histButtonWidth"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/histButtonLeftRightMargin"
            android:background="@android:color/transparent"/>

        <!--android:drawableStart="@drawable/ic_history_black_24dp"-->


    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_speech_to_text"
            android:layout_width="@dimen/speechButtonSize"
            android:layout_height="@dimen/speechButtonSize"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/functionIconsLeftRightMargin"
            android:layout_marginStart="@dimen/functionIconsLeftRightMargin"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_keyboard_voice_black_24dp"
            android:contentDescription="@string/getTextThroughSpeech"/>

        <ImageView
            android:id="@+id/button_ocr"
            android:visibility="gone"
            android:layout_width="@dimen/cameraButtonSize"
            android:layout_height="@dimen/cameraButtonSize"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/functionIconsLeftRightMargin"
            android:layout_marginStart="@dimen/functionIconsLeftRightMargin"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp"
            android:contentDescription="@string/getTextThroughCamera"/>

        <ImageView
            android:id="@+id/button_text_to_speech"
            android:layout_width="@dimen/cameraButtonSize"
            android:layout_height="@dimen/cameraButtonSize"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/functionIconsLeftRightMargin"
            android:layout_marginStart="@dimen/functionIconsLeftRightMargin"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_volume_up_black_24dp"
            android:contentDescription="@string/speakQuery"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">

            <Button
                android:id="@+id/button_dict"
                style="?android:buttonBarButtonStyle"

                android:layout_width="@dimen/inputQueryButtonWidthAtTopRow"
                android:layout_height="@dimen/inputQueryButtonHeight"
                android:textSize="@dimen/inputQueryButtonTextSize"
                android:text="@string/DICT"/>

            <Button
                android:id="@+id/button_conj"
                style="?android:buttonBarButtonStyle"
                android:layout_width="@dimen/inputQueryButtonWidthAtTopRow"
                android:layout_height="@dimen/inputQueryButtonHeight"
                android:textSize="@dimen/inputQueryButtonTextSize"
                android:text="@string/CONJ"/>

            <Button
                android:id="@+id/button_convert"
                style="?android:buttonBarButtonStyle"
                android:layout_width="@dimen/inputQueryButtonWidthAtTopRow"
                android:layout_height="@dimen/inputQueryButtonHeight"
                android:textSize="@dimen/inputQueryButtonTextSize"
                android:text="@string/Convert"/>

            <!--<Button-->
            <!--android:id="@+id/button_searchTangorin"-->
            <!--style="?android:buttonBarButtonStyle"-->
            <!--android:layout_width="@dimen/inputQueryButtonWidthAtTopRow"-->
            <!--android:layout_height="@dimen/inputQueryButtonHeight"-->
            <!--android:textSize="@dimen/inputQueryButtonTextSize"-->
            <!--android:text="@string/button_SearchTangorin"/>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">


            <Button
                android:id="@+id/button_search_by_radical"
                style="?android:buttonBarButtonStyle"
                android:layout_width="@dimen/inputQueryButtonWidthAtBottomRow"
                android:gravity="center_vertical|center_horizontal"
                android:layout_height="@dimen/inputQueryButtonHeight"
                android:textSize="@dimen/inputQueryButtonTextSize"
                android:text="@string/button_SearchByRadical"/>

            <Button
                android:id="@+id/button_decompose"
                style="?android:buttonBarButtonStyle"
                android:layout_width="@dimen/inputQueryButtonWidthAtBottomRow"
                android:gravity="center_vertical|center_horizontal"
                android:layout_height="@dimen/inputQueryButtonHeight"
                android:textSize="@dimen/inputQueryButtonTextSize"
                android:text="@string/button_Decompose"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>