...
    <string name="select_the_radical">Select the Radical</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="vertical_separator" translatable="false">|</string>
    <string name="kanji_structure">kanji structure</string>
    <string name="no_elements_found">No Elements Found.</string>
    <string name="general">General</string>
    <string name="search">Search</string>
    <string name="languages">Languages</string>
    <string name="speech">Speech</string>
    <string name="optical_character_recognition">Optical Character Recognition</string>
    <string name="kanji_tools">Kanji Tools</string>
    <string name="verb">verb</string>
    <string name="from_alt_form">From alt. form</string>
...
    <string name="additional_stroke">additional stroke</string>
    <string name="number_abbrev_">No.</string>
    <string name="with">with</string>
    <string name="special_symbol_with_meaning">Special symbol with meaning</string>
    <string name="strokes">strokes</string>
    <string name="stroke">stroke.</string>
    <string name="radical">Radical</string>
    <string name="radical_variant">radical variant</string>
    <string name="simplification">simplification</string>
    <string name="english_meanings_available_only">(English meanings available only)</string>
    <string name="installing_extra_dbs_please_wait">Installing database:</string>
    <string name="starting_installation">Starting installation</string>
    <string name="installing_EDICT">Complete dictionary</string>
...
